--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+#firebase
+.firebase
+
 # compiled output
-/.firebase
 /dist
 /tmp
 /out-tsc
@@ -45,3 +47,4 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
