--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,7 @@
               "src/manifest.webmanifest"
             ],
             "styles": ["src/styles.scss"],
-            "scripts": ["src/install_button.js"]
+            "scripts": ["src/JS/install_button.js"]
           },
           "configurations": {
             "production": {
