--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 #firebase
-.firebase
+.firebase/*
 
 # compiled output
 /dist
@@ -47,5 +47,3 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
-
-.firebase/hosting.ZGlzdC9yZWNpcGU0eW91.cache
